--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    // rules
     "target": "ESNext",
     "module": "ESNext",
     "jsx": "react-jsx",
@@ -9,12 +10,13 @@
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "esModuleInterop": true,
-    "noEmit": false,
+    "noEmit": true,
 
     // lining
     "strict": true,
-    "jsxImportSource": "@emotion/react"
+    "jsxImportSource": "@emotion/react",
+    "removeComments": true
   },
-  "include": ["src/**/*", "cypress/**/*"],
+  "include": ["./src"],
   "exclude": ["/node_modules/"]
 }
