--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,15 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@babel/core": "7.24.7",
+    "@babel/preset-env": "7.24.7",
+    "@babel/preset-react": "7.24.7",
+    "@babel/preset-typescript": "7.24.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
+    "babel-loader": "9.1.3",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
@@ -43,13 +48,10 @@
     "html-webpack-plugin": "5.6.0",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
-    "prettier": "3.3.2",
     "stylelint": "16.6.1",
     "stylelint-config-clean-order": "6.1.0",
-    "stylelint-config-concentric-order": "5.2.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-prettier": "5.0.0",
-    "ts-loader": "9.5.1",
     "typescript": "5.5.3",
     "typescript-eslint": "7.16.0",
     "webpack": "5.92.1",
