--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,21 +23,24 @@
   },
   "homepage": "https://github.com/woowacourse-teams/2024-momo#readme",
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "11.11.0",
     "@emotion/react": "11.11.4",
+    "@tanstack/react-query": "5.51.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.24.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.7",
     "@babel/preset-env": "7.24.7",
     "@babel/preset-react": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
+    "@emotion/babel-plugin": "11.11.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
     "babel-loader": "9.1.3",
-    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.9.0",
@@ -53,7 +56,6 @@
     "stylelint-config-standard": "36.0.1",
     "stylelint-prettier": "5.0.0",
     "typescript": "5.5.3",
-    "typescript-eslint": "7.16.0",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
