chore: 절대경로 설정 및 자동 정렬 플러그인 연결

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -7,5 +7,26 @@
   "trailingComma": "all",
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+
+  "importOrder": [
+    "^@layouts/(.*)$",
+    "^@pages/(.*)$",
+    "^@components/(.*)$",
+    "^@hooks/(.*)$",
+    "^@apis/(.*)$",
+    "^@common/(.*)$",
+    "^@utils/(.*)$",
+    "^@assets/(.*)$",
+    "^@styles/(.*)$",
+    "^@constants/(.*)$",
+    "^@mocks/(.*)$",
+    "^@types/(.*)$",
+    "^[./]"
+  ],
+
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
