chore: RTL 사용을 위한 설정
- package.json에 의존성 추가
- jest.config.js 파일 설정
- 타입스크립트 환경에서 jest를 사용할 수 있도록 tsconfig.json 파일 설정 변경

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "prod": "webpack server --open --config webpack.prod.js",
     "dev": "webpack server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
+    "lint:css": "stylelint '**/*.styles.ts' --fix",
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -47,6 +49,8 @@
     "@storybook/react": "8.2.4",
     "@storybook/react-webpack5": "8.2.4",
     "@storybook/test": "8.2.4",
+    "@testing-library/dom": "10.3.2",
+    "@testing-library/react": "16.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -62,6 +66,7 @@
     "eslint-plugin-storybook": "0.8.0",
     "fork-ts-checker-webpack-plugin": "9.0.2",
     "html-webpack-plugin": "5.6.0",
+    "jest-environment-jsdom": "29.7.0",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
     "storybook": "8.2.4",
@@ -69,6 +74,8 @@
     "stylelint-config-clean-order": "6.1.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-prettier": "5.0.0",
+    "ts-jest": "29.2.2",
+    "tsconfig-paths-webpack-plugin": "4.1.0",
     "typescript": "5.5.3",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4",
