chore: msw 사용을 위한  설정
- package.json 의존성 추가
- msw 버젼 업데이트 마이그레이션 과정에서 발생하는 문제를 해결하기 위한 폴리필 설정 파일 추가
- typescript 및 jest 환경에서 msw를 사용하기 위한 설정 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "fork-ts-checker-webpack-plugin": "9.0.2",
     "html-webpack-plugin": "5.6.0",
     "jest-environment-jsdom": "29.7.0",
+    "msw": "2.3.1",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
     "storybook": "8.2.4",
@@ -77,6 +78,7 @@
     "ts-jest": "29.2.2",
     "tsconfig-paths-webpack-plugin": "4.1.0",
     "typescript": "5.5.3",
+    "undici": "6.19.2",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
