--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -36,6 +36,6 @@
     // test
     "types": ["jest"]
   },
-  "include": ["./src"],
+  "include": ["./src", "jest.setup.js"],
   "exclude": ["/node_modules/"]
 }
