[FE] 스토리북, RTL, msw 사용을 위한 환경설정 (#32)
* chore: 스토리북 사용을 위한 설정

- package.json 의존성 추가
- .storybook 초기화 파일 추가
- 스토리북 관련 린트 규칙 추가
- 버튼 스토리북 생성 후 로컬 서버에서 동작 확인

* chore: RTL 사용을 위한 설정

- package.json에 의존성 추가
- jest.config.js 파일 설정
- 타입스크립트 환경에서 jest를 사용할 수 있도록 tsconfig.json 파일 설정 변경

* chore: msw 사용을 위한  설정

- package.json 의존성 추가
- msw 버젼 업데이트 마이그레이션 과정에서 발생하는 문제를 해결하기 위한 폴리필 설정 파일 추가
- typescript 및 jest 환경에서 msw를 사용하기 위한 설정 추가

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -32,8 +32,10 @@
       "@styles/*": ["styles/*"],
       "@types/*": ["types/*"],
       "@utils/*": ["utils/*"]
-    }
+    },
+    // test
+    "types": ["jest"]
   },
-  "include": ["./src"],
+  "include": ["./src", "jest.setup.js"],
   "exclude": ["/node_modules/"]
 }
