--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "prod": "webpack server --open --config webpack.prod.js",
     "dev": "webpack server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "lint:css": "stylelint '**/*.styles.ts' --fix"
+    "lint:css": "stylelint '**/*.styles.ts' --fix",
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -35,7 +38,19 @@
     "@babel/preset-env": "7.24.7",
     "@babel/preset-react": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
+    "@chromatic-com/storybook": "1.6.1",
     "@emotion/babel-plugin": "11.11.0",
+    "@storybook/addon-essentials": "8.2.4",
+    "@storybook/addon-interactions": "8.2.4",
+    "@storybook/addon-links": "8.2.4",
+    "@storybook/addon-onboarding": "8.2.4",
+    "@storybook/addon-webpack5-compiler-babel": "3.0.3",
+    "@storybook/blocks": "8.2.4",
+    "@storybook/react": "8.2.4",
+    "@storybook/react-webpack5": "8.2.4",
+    "@storybook/test": "8.2.4",
+    "@testing-library/dom": "10.3.2",
+    "@testing-library/react": "16.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -48,15 +63,22 @@
     "eslint-plugin-react": "7.34.3",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.8",
+    "eslint-plugin-storybook": "0.8.0",
     "fork-ts-checker-webpack-plugin": "9.0.2",
     "html-webpack-plugin": "5.6.0",
+    "jest-environment-jsdom": "29.7.0",
+    "msw": "2.3.1",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
+    "storybook": "8.2.4",
     "stylelint": "16.6.1",
     "stylelint-config-clean-order": "6.1.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-prettier": "5.0.0",
+    "ts-jest": "29.2.2",
+    "tsconfig-paths-webpack-plugin": "4.1.0",
     "typescript": "5.5.3",
+    "undici": "6.19.2",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
