--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "fork-ts-checker-webpack-plugin": "9.0.2",
     "html-webpack-plugin": "5.6.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-junit": "^16.0.0",
     "msw": "2.3.1",
     "postcss": "8.4.39",
     "postcss-styled-syntax": "0.6.4",
