chore: 테스트가 없을 경우에는 CI가 통과되도록 수정
Jest 실행 시 `--passWithNoTests` 옵션 추가

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm ci
 
       - name: RTL을 실행해요 :)
-        run: npm run test
+        run: npm run test -- --passWithNoTests
 
       - name: 테스트 결과를 PR에 코멘트로 등록해요 :)
         uses: EnricoMi/publish-unit-test-result-action@v2
