--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@storybook/react": "8.2.4",
     "@storybook/react-webpack5": "8.2.4",
     "@storybook/test": "8.2.4",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "10.3.2",
     "@testing-library/react": "16.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.3.0",
