chore: eslint jsx-a11y 일부 설정 "off"로 설정

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,8 @@
     "plugin:storybook/recommended"
   ],
   "rules": {
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "react-refresh/only-export-components": [
       "warn",
       {
