chore: `stores`, `contexts` 경로 추가

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -13,10 +13,12 @@
 
   "importOrder": [
     "^@layouts/(.*)$",
+    "^@contexts/(.*)$",
     "^@pages/(.*)$",
     "^@components/(.*)$",
     "^@hooks/(.*)$",
     "^@apis/(.*)$",
+    "^@stores/(.*)$",
     "^@common/(.*)$",
     "^@utils/(.*)$",
     "^@assets/(.*)$",
