fix: 잘못된 assets 경로 수정

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,7 +22,7 @@
     "baseUrl": "./src",
     "paths": {
       "@apis/*": ["apis/*"],
-      "@assets/*": ["apis/*"],
+      "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
       "@constants/*": ["constants/*"],
       "@hooks/*": ["hooks/*"],
