chore: PR merge 전 워크플로우 테스트를 위한 트리거 추가

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches: ['develop']
+  pull_request:  # PR 액션 테스트용 임시 추가
+    branches: ['develop']
 
 jobs:
   detect-changes:
