[FE] 해커톤 구현 내용 리팩터링 (#49)
* chore: .vscode 세팅파일 수정

* refactor: TimePicker 컴포넌트에서 Button 컴포넌트 분리

- TimePicker내부 로직을 페이지 최상단으로 끌어 올림
- TimePicker util함수 TimePickerPage로 이동
- 가능 시간, 시작 시간, ref, value를 TimePicker props로 받도록 수정

* design: button 기본 색상 'red' 및 border 제거

* chore: eslint jsx-a11y 일부 설정 "off"로 설정

* refactor(TimeSlot): 시간 선택 박스 컴포넌트 분리

* refactor: schedule api 컨텍스트 통합

* refactor: 서버 상태 관리 로직 레이어 분리

* comment: uuid 관련 주석 추가

* design(TimeSlot): 스타일 로직 통합

* chore: `stores`, `contexts` 경로 추가

* refactor: `isUpdate` 상태 context로 관리

* refactor(TimePicker): UpdateProvider 로직 연결 및 Picker, Viewer과 나누기 위한 폴더 분리

* style: css 선언 순서 수정

* fix: post 요청 시 return 값 없도록 수정

* feat: queryKey 상수 정의

* refactor: mutation에 invalidateQueries 추가 및 queryKey 상수로 변경

* refactor: update 상태 provider 연결 및 TimePicker, TimeViewer 분리 후 구현

* refactor: 시간 수정 낙관적 업데이트 로직 추가

- 네트워크가 느린 사용자를 고려하여 낙관적 업데이트 로직 추가
- onSettled가 실행된 후, 낙관적 업데이트가 끝난 후 수정, 보기 모드가 변경되도록 하여 깜빡임 현상 개선

* refactor: 기존 테이블을 구성할 때 사용했던 서버 상태의 '초' 단위 제거

* refactor: context에서 관리하는 isUpdate 상태 값을 Provider 에서 내려주도록 변경

* chore: 인터페이스명 PascalCase로 수정

* chore: consistent-type-imports 규칙 추가 및 규칙 반영

- 타입 정의 import 시 import type 명시되도록 수정

* refactor: 상수 정의 as const 사용

* rename: update -> TimePickerUpdate로 네이밍 수정

* rename: css prop 네이밍 <name>Style로 수정

* refactor: 조건부 렌더링 코드 수정

* refactor: 페이지명 변경사항 router파일에 적용

* rename: css prop 네이밍 규칙에 따른 변수명 수정

---------

Co-authored-by: hwinkr <dnddl8280@naver.com>

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,9 @@
     "plugin:storybook/recommended"
   ],
   "rules": {
+    "@typescript-eslint/consistent-type-imports": "error",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "react-refresh/only-export-components": [
       "warn",
       {
