--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -23,6 +23,7 @@ jobs:
 
       - uses: actions/checkout@v4  # Push 이벤트이기 때문에 checkout 해야 함
         with:
+          ref: develop
           submodules: recursive
           token: ${{ secrets.PAT_TOKEN }}
       - uses: dorny/paths-filter@v3
@@ -49,6 +50,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+#        with:
+#          ref: develop
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
