chore: 액션 테스트용 설정 제거

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -4,8 +4,6 @@ on:
   workflow_dispatch:
   push:
     branches: ['develop']
-  pull_request:  # PR 액션 테스트용 임시 추가
-    branches: ['develop']
 
 jobs:
   detect-changes:
@@ -50,8 +48,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-#        with:
-#          ref: develop
+        with:
+          ref: develop
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
