chore: 테스트 시 data.sql이 실행되지 않도록 환경설정 추가

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -7,6 +7,9 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+  sql:
+    init:
+      mode: never
 
 security:
   jwt:
