[BE] 백엔드 CD 자동화 환경 구축 (#67)
* build: bootJar 빌드 시 yml 파일들을 포함하지 않도록 설정

* chore: 비밀 정보 관리를 위한 비공개 레포지토리 서브모듈 추가

- woowacourse-teams/2024-momo-config
- src/main/resources/security

* build: Gradle 빌드 시 서브모듈 내의 yml 파일들을 복사하는 task 등록

Co-authored-by: seunghye218 <seunghye@student.42seoul.kr>

* build(Dockerfile): Dockerfile 추가

Co-authored-by: seunghye218 <seunghye@student.42seoul.kr>

* chore: 백엔드 CD 자동화 워크플로우 작성

Co-authored-by: seunghye218 <seunghye@student.42seoul.kr>

* chore: PR merge 전 워크플로우 테스트를 위한 트리거 추가

* fix: 체크아웃할 브랜치(develop) 명시

* chore: 액션 테스트용 설정 제거

---------

Co-authored-by: seunghye218 <seunghye@student.42seoul.kr>

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,3 +44,14 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+bootJar {
+    exclude('*.yml')
+}
+
+processResources.dependsOn('copyYML')
+tasks.register('copyYML', Copy) {
+    from 'src/main/resources/security' // 서브 모듈 경로
+    include "*.yml"
+    into 'src/main/resources'
+}
