--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,5 +85,10 @@
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.4",
     "webpack-merge": "6.0.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
