--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@emotion/react": "11.11.4",
     "@tanstack/react-query": "5.51.1",
     "react": "18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "18.3.1",
     "react-router-dom": "6.24.1"
   },
